Updating work page layouts to prevent screen jumping when the work panels are activated.

--- a/scss/components/_split-page.scss
+++ b/scss/components/_split-page.scss
@@ -59,6 +59,8 @@
 // Page Content
 //------------------
 .page-detail-wrapper {
+  height: 100vh;
+  overflow-y: scroll;
   opacity: 0;
   animation: fade-in 750ms ease-in forwards;
   animation-delay: 750ms;
